crustrace-mermaid/tests/snapshots/integration__tests__snapshot_unique_per_call.snap
---
source: crustrace-mermaid/tests/integration.rs
expression: layer.render()
---
flowchart TD
subgraph Params1[" "]
  P2_0["a = 10"]:::data
  P2_1["b = 20"]:::data
  P2_0 --- P2_1
end
F1["outer()"]:::func
Params1 --> F1
subgraph Params2[" "]
  P3_0["x = 11"]:::data
  P3_1["y = 2"]:::data
  P3_0 --- P3_1
end
F2["inner()"]:::func
Params2 --> F2
  F1 --> Params2
subgraph Params3[" "]
  P4_0["x = 20"]:::data
  P4_1["y = 1"]:::data
  P4_0 --- P4_1
end
F3["inner()"]:::func
Params3 --> F3
  F1 --> Params3

classDef func fill:#c6f6d5,stroke:#2f855a,stroke-width:2px,color:#22543d;
classDef data fill:#bee3f8,stroke:#2b6cb0,stroke-width:1.5px,color:#1a365d;
classDef params fill:none,stroke:#e53e3e,stroke-width:2px,color:#742a2a;
class Params1,Params2,Params3 params;
